footer and menu content

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,11 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ block "title" . }}{{ end }}</title>
-
-    <link rel="stylesheet" href="thirdparty/bootstrap-5.0.2-dist/css/bootstrap.min.css">
 </head>
 
 <body>
+    
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/countries/">Countries</a></li>
+        </ul>
+    </nav>
 
     <header>
         {{ block "header" . }}{{ end }}
@@ -22,7 +27,14 @@
     </div>
 
     <footer>
-        Footer content
+        <p>Govdirectory - a crowdsourced and fact checked directory of official governmental online accounts and services. Supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/">Unlock Accelerator</a>.</p>
+        <div>
+            <ul>
+                <li><a href="https://www.wikidata.org/wiki/Wikidata:Gov_Directory">Wikidata</a></li>
+                <li><a href="https://github.com/govdirectory">GitHub</a></li>
+                <li><a href="https://twitter.com/govdirectory">Twitter</a></li>
+            </ul>
+        </div>
     </footer>
 
     {{ block "javascript" . }}{{ end }}
