--- a/templates/social-table.html
+++ b/templates/social-table.html
@@ -1,7 +1,15 @@
 <h2>Social media</h2>
-<ul>
+
+<table>
+    <tr>
+      <th>Platform</th>
+      <th>Account</th>
+    </tr>
+
     {{ range . }}
-       {{/* one will need to split urls as it can be a comma seperated list */}}
-        <li><a href="{{ .url_list }}">{{ .issuerLabel }}</a></li> 
+    <tr>
+        <td>{{ .issuerLabel }}</td>
+        <td><a href="{{ .url_list }}">{{ .url_list }}</a></td>
+    </tr>
     {{ end }}
-</ul>
+</table>
