display a message and a link to wd if not accounts are found

--- a/templates/org.html
+++ b/templates/org.html
@@ -4,12 +4,18 @@
 {{ define "title" }}{{ .orgLabel }}{{ end }}
 
 {{ define "header" }}
-<h1>{{ .orgLabel }}</h1>
-<p>{{ .orgDescription }}</p>
+    <h1>{{ .orgLabel }}</h1>
+    <p>{{ .orgDescription }}</p>
 {{ end }}
 
 {{ define "main" }}
-{{ template "social-table.html" query "account-data" .qid.String }}
+    {{ $socialAccounts := query "account-data" .qid.String }}
+
+    {{ if $socialAccounts }}
+        {{ template "social-table.html" $socialAccounts }}
+    {{ else }}
+        <p>No social media accounts found! Know some? Add them to <a href="https://wikidata.org/wiki/{{ .qid }}">Wikidata</a>.</p>
+    {{ end }}
 {{ end }}
 
 {{ define "javascript" }}{{""}}{{ end }}
