--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -3,6 +3,8 @@
 
 {{ define "title" }}{{ .orgLabel }}{{ end }}
 
+{{ define "canonical" }}/{{ .safeName }}/{{ end }}
+
 {{ define "header" }}
 <h1>{{ .name }}</h1>
 <p>{{ .description }}</p>
