--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ block "title" . }}{{ end }}</title>
 
+    <link rel="canonical" href="https://www.govdirectory.org{{ block "canonical" . }}{{ end }}">
+
     <link rel="stylesheet" href="/main.css">
 </head>
 
