fix title on country pages

--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -1,7 +1,7 @@
 
 {{ template "layout" . }}
 
-{{ define "title" }}{{ .orgLabel }}{{ end }}
+{{ define "title" }}{{ .name }}{{ end }}
 
 {{ define "canonical" }}/{{ .safeName }}/{{ end }}
 
