--- a/static/main.css
+++ b/static/main.css
@@ -2,11 +2,111 @@
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
+    background-size: 400% 400%;
+    animation: gradientBG 20s ease infinite;
+    color: #fff;
 }
 
 ul {
     list-style: none;
     padding: 0;
+}
+
+h1 {
+    font-size: clamp(2rem, 10vw, 4rem);
+    font-weight: 400;
+    line-height: 1.15;
+    margin: 0;
+}
+
+h2 {
+    font-size: clamp(2rem, 8vw, 3rem);
+    font-weight: 400;
+    line-height: 1.15;
+    margin: 0;
+    text-align:center;
+}
+
+.header-img {
+    padding-top: 80px;
+    padding-bottom: 30px;
+}
+
+.light-link {
+    text-decoration:underline;
+    color: #FFF;
+}
+
+.dark-link {
+    text-decoration:underline;
+    color: #000;
+}
+
+
+/* SECTIONS FOR CONTENT */
+
+.content{
+    line-height: 1.55;
+    color: #000;
+    font-weight: 400;
+    font-size: clamp(1rem, 1vw, 1rem);
+    background-color: #FFF;
+    padding: 50px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.content, .subject p {
+    padding-bottom:10px;
+}
+
+.subject {
+    line-height: 1.55;
+    color: #000;
+    font-weight: 400;
+    font-size: clamp(1rem, 1vw, 1rem);
+    background-color: #EEE;
+    padding: 50px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.subject,.content,.col a {
+    color: #000;
+    text-decoration:none;
+}
+
+
+/* SPLASH FOREGROUND OF ANIMATION */
+
+.splash {
+    background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
+    animation: gradientBG 20s ease infinite;
+    background-size: 400% 400%;
+}
+
+.splash div {
+    box-sizing: border-box;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    background: url('repeat-bg.svg');
+}
+
+.splash p {
+    line-height: 1.55;
+    color: rgba(255, 255, 255, .9);
+    font-weight: 400;
+    font-size: clamp(1rem, 3vw, 2rem);
+    width:50%;
+    text-align: center;
 }
 
 
@@ -17,11 +117,89 @@ nav ul {
     justify-content: space-around;
 }
 
+#navbar {
+    overflow: hidden;
+    background-color: #00264d;
+}
+
+#navbar a {
+    display: inline-block;
+    text-align: center;
+    padding: 20px 16px 14px;
+    color: #FFF;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+#navbar a:hover {
+    background-color: #107FC9;
+    color: #FFF;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + .content {
+    padding-top: 60px;
+}
+
+.nav{
+    border-width:0px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+
+.nav li{
+    display:inline;
+}
+
+
 /* FOOTER */
 
-footer ul {
+footer {
+    background-color: #00264d;
+    color: #fff;
+    padding: 1em;
+}
+
+footer p {
+    font-weight: 100;
+    font-size: clamp(1rem, 1vw, 1rem);
+}
+
+footer a {
+    text-decoration:none;
+    color: #fff;
+}
+
+.footer-header {
+    font-size: clamp(1rem, 2vw, 1.5rem);
+}
+
+.footer-table {
     display: flex;
     justify-content: space-around;
+    height: 30vh;
+}
+
+.footer-end {
+    padding: 0;
+    height: 50px;
+    display: flex;
+    justify-content: right;
+}
+
+.footer-image {
+    padding-bottom: 0px;
+}
+
+.white-bg {
+    background-color:#FFF;
 }
 
 /* TABLE */
