make helper templates to get country information
This adds two templates which can given a Wikidata URI retrieve a variable from that country's defination in countries.rq.

This yeilds country.rq each time it's run and would benefit greatly from Snowman's future cached templates.

Side effect: added country "tag"/link to org pages

--- a/templates/org.html
+++ b/templates/org.html
@@ -3,9 +3,10 @@
 
 {{ define "title" }}{{ .orgLabel }}{{ end }}
 
-{{ define "canonical" }}/{{ .countryURL }}/{{ .qid }}/{{ end }}
+{{ define "canonical" }}/{{ template "get-country-url.html" .country }}/{{ .qid }}/{{ end }}
 
 {{ define "header" }}
+<a href="/{{ template "get-country-url.html" .country }}/">{{ template "get-country-name.html" .country }}</a>
     <h1>{{ .orgLabel }}</h1>
     <p>{{ .orgDescription }}</p>
 {{ end }}
