--- a/static/main.css
+++ b/static/main.css
@@ -2,9 +2,6 @@
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
-    background-size: 400% 400%;
-    animation: gradientBG 20s ease infinite;
     color: #fff;
 }
 
@@ -27,11 +24,6 @@ h2 {
     line-height: 1.15;
     margin: 0;
     text-align:center;
-}
-
-.header-img {
-    padding-top: 80px;
-    padding-bottom: 30px;
 }
 
 .light-link {
@@ -85,11 +77,33 @@ section {
 .splash p {
     line-height: 1.55;
     color: rgba(255, 255, 255, .9);
-    font-weight: 400;
-    font-size: clamp(1rem, 3vw, 2rem);
-    width:50%;
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    width: 50%;
+    margin-bottom: 0;
     text-align: center;
+    padding-bottom: 50px;
 }
+
+.splash img {
+    padding-top: 50px;
+    padding-bottom: 30px;
+}
+
+
+@keyframes gradientBG {
+  0% {
+    background-position: 0% 0%
+  }
+
+  50% {
+    background-position: 100% 100%
+  }
+
+  100% {
+    background-position: 0% 0%
+  }
+}
+
 
 
 /* NAV */
@@ -210,5 +224,14 @@ table tr:nth-child(even){
     .container {
         width: 800px;
         margin: auto;
+    }
+}
+
+
+/* A11Y */
+
+@media (prefers-reduced-motion) {
+    * {
+        animation: none;
     }
 }
