--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,14 @@
     <link rel="canonical" href="https://www.govdirectory.org{{ block "canonical" . }}{{ end }}">
 
     <link rel="stylesheet" href="/main.css">
+
+    <noscript>
+        <style>
+            .need-js {
+                display: none;
+            }
+        </style>
+    </noscript>
 </head>
 
 <body>
