--- a/templates/org.html
+++ b/templates/org.html
@@ -5,13 +5,15 @@
 
 {{ define "canonical" }}/{{ template "get-country-url.html" .country }}/{{ .qid }}/{{ end }}
 
-{{ define "header" }}
-<a href="/{{ template "get-country-url.html" .country }}/">{{ template "get-country-name.html" .country }}</a>
-    <h1>{{ .orgLabel }}</h1>
-    <p>{{ .orgDescription }}</p>
-{{ end }}
+{{ define "pre-main" }}{{ "" }}{{ end }}
+
+{{ define "main-constraint-classes" }}container{{ end }}
 
 {{ define "main" }}
+<a href="/{{ template "get-country-url.html" .country }}/">{{ template "get-country-name.html" .country }}</a>
+<h1>{{ .orgLabel }}</h1>
+<p>{{ .orgDescription }}</p>
+
     {{ $socialAccounts := query "account-data" .qid.String }}
 
     {{ if $socialAccounts }}
