change default text color

--- a/static/main.css
+++ b/static/main.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    color: #fff;
+    color: #333;
 }
 
 ul {
@@ -61,6 +61,7 @@ section {
     background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
     animation: gradientBG 20s ease infinite;
     background-size: 400% 400%;
+    color: rgba(255, 255, 255, .9);
 }
 
 .splash div {
@@ -76,7 +77,6 @@ section {
 
 .splash p {
     line-height: 1.55;
-    color: rgba(255, 255, 255, .9);
     font-size: clamp(1rem, 2.5vw, 2rem);
     width: 50%;
     margin-bottom: 0;
