--- a/templates/about.html
+++ b/templates/about.html
@@ -29,9 +29,11 @@
     <p>We will enable a community powered directory where the online presence of every public organization is easily findable, queryable and trustworthy.</p>
   </div>
 </section>
-<section class="container center-text">
-  <h2>Support</h2>
-  <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
+<section>
+  <div class="container center-text">
+    <h2>Support</h2>
+    <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
+  </div>
 </section>
 {{ end }}
 
