--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,11 +49,6 @@
                     <li><a href="https://twitter.com/govdirectory">Twitter</a></li>
 
                 </ul>
-
-                <p><a href="/">
-                        <img class="footer-image" aria-hidden="true" src="/logo-white.svg" alt="" width="50px">
-                    </a>
-                </p>
             </div>
             <div class="column">
                 <p class="footer-header">Join the community</p>
@@ -75,16 +70,13 @@
                             href="https://github.com/govdirectory/website/blob/main/LICENSE" rel="license"
                             class="light-link">LICENSE</a>.</li>
                 </ul>
-                <div class="footer-end">
-                    <a title="Powered by Wikidata" href="https://www.wikidata.org">
-                        <img aria-hidden="true" class="white-bg"
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/120px-Wikidata_Stamp_Rec_Light.svg.png"></a>
-                </div>
             </div>
         </div>
+        <div class="footer-end">
+            <a href="/"><img aria-hidden="true" src="/logo-white.svg" alt="" width="50px"></a>
+            <a title="Powered by Wikidata" href="https://www.wikidata.org"><img aria-hidden="true" class="white-bg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/120px-Wikidata_Stamp_Rec_Light.svg.png"></a>
         </div>
-    </footer>
-
+    </footer> 
     {{ block "javascript" . }}{{ end }}
 </body>
 
