Display selected platforms in result views #57
For now: Twitter, YouTube, LinkedIn, Facebook, and Instagram.

No styling or icons at this point.

--- a/templates/org-table.html
+++ b/templates/org-table.html
@@ -3,12 +3,14 @@
 <table>
     <tr>
       <th>Name</th>
+      <th>Quick Links</th>
       <th>Type</th>
     </tr>
 
     {{ range . }}
     <tr>
         <td><a href="{{ .qid }}">{{ .orgLabel }}</a></td>
+        <td>{{ template "social-icons.html" query "account-data.rq" .qid.String }}</td>
         <td>{{ .typeLabel }}</td>
     </tr>
     {{ end }}
