--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <header class="splash">
   <div>
     <img aria-hidden="true" src="/logo-white.svg" width="150px">
-    <h1>Govdirectory</h1>
+    <h1 class="lg-h1">Govdirectory</h1>
     <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
   </div>
 </header>
@@ -19,19 +19,19 @@
 {{ define "main" }}
 <section>
   <div class="container center-text">
-    <h2>Vision</h2>
+    <h2 class="h2-lg">Vision</h2>
     <p>Our vision is a world where people are empowered to engage with their government to ensure responsive, inclusive, participatory and representative decision-making at all levels.</p>
   </div>
 </section>
 <section class="bg-grey">
   <div class="container center-text">
-    <h2>Mission</h2>
+    <h2 class="h2-lg">Mission</h2>
     <p>We will enable a community powered directory where the online presence of every public organization is easily findable, queryable and trustworthy.</p>
   </div>
 </section>
 <section>
   <div class="container center-text">
-    <h2>Support</h2>
+    <h2 class="h2-lg">Support</h2>
     <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
   </div>
 </section>
