Replace issuer with a better property for retrieving platform name #56
This replaces the issuer property with the "subproperty of"->"website username"->"of"-><platform> pattern.

All platforms does however not have the subproperty... pattern. https://w.wiki/3gcz

--- a/templates/social-table.html
+++ b/templates/social-table.html
@@ -8,7 +8,7 @@
 
     {{ range . }}
     <tr>
-        <td>{{ .issuerLabel }}</td>
+        <td>{{ .platformLabel }}</td>
         <td><a href="{{ .url }}">{{ .url }}{{ if eq .verified.String "true" }} (verified){{ end }}</a></td>
     </tr>
     {{ end }}
