--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
     </div>
 
     <footer>
-        <div class="footer-table">
+        <div class="footer-table container">
             <div class="column">
                 <p class="footer-header"><a href="/">Govdirectory</a></p>
                 <ul class="list-unstyled">
@@ -72,7 +72,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer-end">
+        <div class="container footer-end">
             <a href="/"><img aria-hidden="true" src="/logo-white.svg" alt="" width="50px"></a>
             <a title="Powered by Wikidata" href="https://www.wikidata.org"><img aria-hidden="true" class="white-bg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/120px-Wikidata_Stamp_Rec_Light.svg.png"></a>
         </div>
