use whitespace controllers in all templates
Previously only a subset of the template used whitespace controllers.

--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -12,9 +12,9 @@
 <h1>Countries</h1>
 
 <ul class="box-list">
-    {{ range . }}
-    <li><a href="/{{ .safeName }}">{{ .name }}</a></li>
-    {{ end }}
+    {{- range . -}}
+        <li><a href="/{{ .safeName }}">{{ .name }}</a></li>
+    {{- end -}}
 </ul>
 {{ end }}
 
