--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -14,7 +14,9 @@
 <p>{{ .description }}</p>
 
 <a id="download" download="{{ .name }}.csv" href="#" class="btn need-js">Download</a>
-{{ template "org-table.html" query (join "" "generators/" .safeName.String) .safeName.String }}
+
+{{- template "org-table.html" query (join "" "generators/" .safeName.String) .safeName.String -}}
+
 {{ end }}
 
 {{ define "javascript" }}
