--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 
-    {{ block "pre-main" . }}{{- "" -}}{{ end }}
+    {{ block "pre-main" . }}{{ end }}
 
     <div class="{{ block "main-constraint-classes" . }}{{ end }}">
         <main>
