--- a/templates/social-table.html
+++ b/templates/social-table.html
@@ -6,10 +6,10 @@
       <th>Account</th>
     </tr>
 
-    {{ range . }}
+    {{- range . -}}
     <tr>
         <td>{{ .platformLabel }}</td>
         <td><a href="{{ .url }}">{{ .url }}{{ if eq .verified.String "true" }} (verified){{ end }}</a></td>
     </tr>
-    {{ end }}
+    {{ end -}}
 </table>
