--- a/static/main.css
+++ b/static/main.css
@@ -197,6 +197,10 @@ table tr:nth-child(even){
     background-color: #f2f2f2;
 }
 
+table ul li {
+    display: inline;
+    margin-right: 3px;
+}
 
 /* BUTTONS */
 
