🔧 replace use of the "metadata" template function
It's deprecated upstream and will be removed in 0.1.0.

--- a/templates/org.html
+++ b/templates/org.html
@@ -50,7 +50,7 @@
 {{/* This ensures that links returned by SPARQL is not escaped as if this was HTML */}}
 {{ safe_html "<script" }} type="application/ld+json">
 {{- $socialAccounts := query "account-data" .qid.String -}}
-{{- $global := metadata }}
+{{- $global := config.Metadata }}
 {
   "@context": "https://schema.org",
   "@type": "Organization",
